CREATE TABLE ADMIN.DIM_CUST (
  CUST_ID   NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  CUST_NAME VARCHAR2(128),
  AGE       NUMBER(3),
  GENDER    VARCHAR2(10),
  LOCATION  VARCHAR2(100),
  PHONE     VARCHAR2(20),
  EMAIL     VARCHAR2(100)
);