CREATE TABLE ADMIN.DIM_EMP (
  EMP_ID       NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  EMP_NAME     VARCHAR2(128),
  EMP_POSITION VARCHAR2(50),
  HIRE_DATE    DATE
);