CREATE TABLE ADMIN.DIM_PROD (
  PROD_ID        NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  PROD_NAME      VARCHAR2(128),
  CATEGORY       VARCHAR2(50),
  PRICE          NUMBER(10,2),
  STOCK_QUANTITY NUMBER,
  PROD_DESC      VARCHAR2(255),
  VENDOR_NAME    VARCHAR2(100)
);