CREATE TABLE ADMIN.DIM_PROMOTION (
  PROMO_ID          NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  NAME              VARCHAR2(100),
  START_DATE        DATE,
  END_DATE          DATE,
  DISCOUNT_PERCENT  NUMBER(5,2),
  DISCOUNT_IN_PRICE NUMBER(10,2)
);