CREATE TABLE ADMIN.DIM_STORE (
  STORE_ID     NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  NAME         VARCHAR2(100),
  LOCATION     VARCHAR2(100),
  TYPE         VARCHAR2(50),
  OPENING_DATE DATE
);