CREATE TABLE ADMIN.FACT_INVENTORY (
  INVENTORY_ID  NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  PROD_ID       NUMBER NOT NULL,
  STORE_ID      NUMBER NOT NULL,
  DATE_ID       DATE NOT NULL,
  ON_HAND_QTY   NUMBER,
  RESERVED_QTY  NUMBER,
  DAMAGED_QTY   NUMBER,
  REORDER_QTY   NUMBER,

  CONSTRAINT FK_INV_PROD  FOREIGN KEY (PROD_ID) REFERENCES ADMIN.DIM_PROD(PROD_ID),
  CONSTRAINT FK_INV_STORE FOREIGN KEY (STORE_ID) REFERENCES ADMIN.DIM_STORE(STORE_ID),
  CONSTRAINT FK_INV_DATE  FOREIGN KEY (DATE_ID) REFERENCES ADMIN.DIM_DATE(DATE_ID)
);