CREATE TABLE ADMIN.FACT_SALES_TRANS (
  TRANS_ID   NUMBER GENERATED ALWAYS AS IDENTITY PRIMARY KEY,
  DATE_ID    DATE NOT NULL,
  PROD_ID    NUMBER NOT NULL,
  CUST_ID    NUMBER NOT NULL,
  STORE_ID   NUMBER NOT NULL,
  EMP_ID     NUMBER,
  PROMO_ID   NUMBER,
  QUANTITY   NUMBER,
  TOTAL_AMT  NUMBER(10,2),

  CONSTRAINT FK_SALES_DATE   FOREIGN KEY (DATE_ID) REFERENCES ADMIN.DIM_DATE(DATE_ID),
  CONSTRAINT FK_SALES_PROD   FOREIGN KEY (PROD_ID) REFERENCES ADMIN.DIM_PROD(PROD_ID),
  CONSTRAINT FK_SALES_CUST   FOREIGN KEY (CUST_ID) REFERENCES ADMIN.DIM_CUST(CUST_ID),
  CONSTRAINT FK_SALES_STORE  FOREIGN KEY (STORE_ID) REFERENCES ADMIN.DIM_STORE(STORE_ID),
  CONSTRAINT FK_SALES_EMP    FOREIGN KEY (EMP_ID) REFERENCES ADMIN.DIM_EMP(EMP_ID),
  CONSTRAINT FK_SALES_PROMO  FOREIGN KEY (PROMO_ID) REFERENCES ADMIN.DIM_PROMOTION(PROMO_ID)
);