erDiagram
	direction TB
	DIM_DATE {
		DATE DATE PK "DATE_ID"  
		NUMBER DAY  ""  
		NUMBER MONTH  ""  
		VARCHAR MONTH_NAME  ""  
		NUMBER QUARTER  ""  
		NUMBER YEAR  ""  
		VARCHAR WEEKDAY  ""  
	}

	DIM_PROD {
		NUMBER PROD_ID PK ""  
		VARCHAR PROD_NAME  ""  
		VARCHAR CATEGORY  ""  
		NUMBER PRICE  ""  
		NUMBER STOCK_QUANTITY  ""  
		VARCHAR PROD_DESC  ""  
		VARCHAR VENDOR_NAME  ""  
	}

	DIM_CUST {
		NUMBER CUST_ID PK ""  
		VARCHAR CUST_NAME  ""  
		NUMBER AGE  ""  
		VARCHAR GENDER  ""  
		VARCHAR LOCATION  ""  
		VARCHAR PHONE  ""  
		VARCHAR EMAIL  ""  
	}

	DIM_EMP {
		NUMBER EMP_ID PK ""  
		VARCHAR EMP_NAME  ""  
		VARCHAR EMP_POSITION  ""  
		DATE HIRE_DATE  ""  
	}

	DIM_STORE {
		NUMBER STORE_ID PK ""  
		VARCHAR NAME  ""  
		VARCHAR LOCATION  ""  
		VARCHAR TYPE  ""  
		DATE OPENING_DATE  ""  
	}

	DIM_PROMOTION {
		NUMBER PROMO_ID PK ""  
		VARCHAR NAME  ""  
		DATE START_DATE  ""  
		DATE END_DATE  ""  
		NUMBER DISCOUNT_PERCENT  ""  
		NUMBER DISCOUNT_IN_PRICE  ""  
	}

	FACT_SALES_TRANS {
		NUMBER TRANS_ID PK ""  
		DATE DATE_ID FK ""  
		NUMBER PROD_ID FK ""  
		NUMBER CUST_ID FK ""  
		NUMBER STORE_ID FK ""  
		NUMBER EMP_ID FK ""  
		NUMBER PROMO_ID FK ""  
		NUMBER QUANTITY  ""  
		NUMBER TOTAL_AMT  ""  
	}

	FACT_INVENTORY {
		NUMBER INVENTORY_ID PK ""  
		NUMBER PROD_ID FK ""  
		NUMBER STORE_ID FK ""  
		DATE DATE_ID FK ""  
		NUMBER ON_HAND_QTY  ""  
		NUMBER RESERVED_QTY  ""  
		NUMBER DAMAGED_QTY  ""  
		NUMBER REORDER_QTY  ""  
	}

	FACT_SALES_TRANS}o--||DIM_DATE:"uses"
	FACT_SALES_TRANS}o--||DIM_PROD:"contains"
	FACT_SALES_TRANS}o--||DIM_CUST:"by"
	FACT_SALES_TRANS}o--||DIM_STORE:"at"
	FACT_SALES_TRANS}o--||DIM_EMP:"assisted_by"
	FACT_SALES_TRANS}o--||DIM_PROMOTION:"applied"
	FACT_INVENTORY}o--||DIM_DATE:"snapshot"
	FACT_INVENTORY}o--||DIM_PROD:"tracks"
	FACT_INVENTORY}o--||DIM_STORE:"located_at"

